[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/Menu/1.png" type="Texture" id=1]
[ext_resource path="res://Assets/Menu/2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Menu/Layer_1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Menu/3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Menu/3-1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Menu/7.png" type="Texture" id=6]
[ext_resource path="res://Assets/Menu/l1_sprite_1.png" type="Texture" id=7]
[ext_resource path="res://Assets/Menu/6.png" type="Texture" id=8]
[ext_resource path="res://Assets/Menu/4.png" type="Texture" id=9]
[ext_resource path="res://Assets/Menu/okladka_2.png" type="Texture" id=10]
[ext_resource path="res://Assets/Menu/5.png" type="Texture" id=11]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=12]
[ext_resource path="res://Assets/Menu/okladka_2-1.png" type="Texture" id=13]
[ext_resource path="res://font.tres" type="Theme" id=14]
[ext_resource path="res://Assets/wood.png" type="Texture" id=15]
[ext_resource path="res://SFX/rip_book.wav" type="AudioStream" id=16]
[ext_resource path="res://SFX/menu.wav" type="AudioStream" id=17]
[ext_resource path="res://SFX/menu_button.wav" type="AudioStream" id=18]
[ext_resource path="res://Assets/pen.png" type="Texture" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "game"
} ]
}

[sub_resource type="Animation" id=3]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 222, 128 ), Vector2( 214, 120 ), Vector2( 204, 120 ), Vector2( 183, 120 ), Vector2( 161, 122 ), Vector2( 140, 112 ), Vector2( 122, 112 ), Vector2( 92, 112 ), Vector2( 81, 122 ) ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("Rip")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 16 )
} ],
"times": PoolRealArray( 0 )
}

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 12 )

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color( 0.729412, 0.729412, 0.729412, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 15 )
expand = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 218, 200 )
texture = ExtResource( 7 )

[node name="Okladka2-1" type="Sprite" parent="."]
position = Vector2( 220, 117 )
texture = ExtResource( 13 )

[node name="Title" type="Label" parent="Okladka2-1"]
self_modulate = Color( 0.313726, 0, 0, 1 )
anchor_right = 1.0
margin_left = -84.0
margin_top = -75.0
margin_right = -84.0
margin_bottom = -57.0
rect_scale = Vector2( 1.3, 1.3 )
theme = ExtResource( 14 )
text = "Usse Noir"
align = 1
valign = 1

[node name="Start" type="Label" parent="Okladka2-1"]
self_modulate = Color( 0.741176, 0.313726, 0.313726, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -111.0
margin_top = -103.5
margin_right = -16.0
margin_bottom = -88.5
theme = ExtResource( 14 )
text = "Nowa Opowiesc"
align = 1
valign = 1

[node name="StartButton" type="TextureButton" parent="Okladka2-1/Start"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -2.0

[node name="Credits" type="Label" parent="Okladka2-1"]
self_modulate = Color( 0.313726, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -111.0
margin_top = -85.5
margin_right = -16.0
margin_bottom = -70.5
theme = ExtResource( 14 )
text = "Autorzy"
align = 1
valign = 1

[node name="CreditsButton" type="TextureButton" parent="Okladka2-1/Credits"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = -1.0

[node name="Koniec" type="Label" parent="Okladka2-1"]
self_modulate = Color( 0.313726, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -111.0
margin_top = -67.5
margin_right = -16.0
margin_bottom = -52.5
theme = ExtResource( 14 )
text = "Koniec"
align = 1
valign = 1

[node name="KoniecButton" type="TextureButton" parent="Okladka2-1/Koniec"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 222, 128 )
frames = SubResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 220, 207 )
scale = Vector2( 0.993056, 1 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_out = SubResource( 2 )
anims/open = SubResource( 3 )

[node name="Book" type="TextureButton" parent="."]
margin_left = 146.0
margin_top = 34.0
margin_right = 296.0
margin_bottom = 222.0

[node name="Rip" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -8.0

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )

[node name="Button" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )

[node name="Fade" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )

[node name="Pen" type="Sprite" parent="."]
position = Vector2( 368, 129 )
texture = ExtResource( 19 )
[connection signal="mouse_entered" from="Okladka2-1/Start/StartButton" to="." method="_on_StartButton_mouse_entered"]
[connection signal="mouse_exited" from="Okladka2-1/Start/StartButton" to="." method="_on_StartButton_mouse_exited"]
[connection signal="pressed" from="Okladka2-1/Start/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="mouse_entered" from="Okladka2-1/Credits/CreditsButton" to="." method="_on_CreditsButton_mouse_entered"]
[connection signal="mouse_exited" from="Okladka2-1/Credits/CreditsButton" to="." method="_on_CreditsButton_mouse_exited"]
[connection signal="pressed" from="Okladka2-1/Credits/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="mouse_entered" from="Okladka2-1/Koniec/KoniecButton" to="." method="_on_KoniecButton_mouse_entered"]
[connection signal="mouse_exited" from="Okladka2-1/Koniec/KoniecButton" to="." method="_on_KoniecButton_mouse_exited"]
[connection signal="pressed" from="Okladka2-1/Koniec/KoniecButton" to="." method="_on_KoniecButton_pressed"]
[connection signal="pressed" from="Book" to="." method="_on_Book_pressed"]
